<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backimage" >

    <RelativeLayout
        android:id="@+id/splashid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="19dp"
            android:text="@string/by_nitesh_sarode"
            android:textColor="#000"
            android:textSize="22sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/hiddenpanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dip" >

        <Button
            android:id="@+id/btn_newgame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_custom"
            android:text="@string/new_game"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_htp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/button_custom"
            android:text="@string/how_to_play"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_abtus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/button_custom"
            android:text="@string/about_us"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/button_custom"
            android:text="@string/exit"
            android:textSize="22sp" />
    </LinearLayout>

</RelativeLayout>